--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ url: "https://nicoln-25.github.io"
 github_username: "NicoLN-25"
 minimal_mistakes_skin: "contrast"
 search: true
+atom_feed:
+  hide: true
 
 # Build settings
 markdown: kramdown
@@ -82,3 +84,11 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+# pages
+header_pages:
+  - _pages/about.md
+  - _pages/projects.md
+  - _pages/data-analyst-cv.md
+  - _pages/research-cv.md
+  - _pages/contact.md
