--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ remote_theme: mmistakes/minimal-mistakes
 include:
   - _pages
 
-# Cutoms
+# Cutoms Styles
 custom_css:
   - /assets/css/custom.css
 
