--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ plugins:
 author:
   name   : "Nicolás Luna Niño"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Bioinformatician, Data Analyst and Data scientis"
+  bio    : "Bioinformatician 🧬🦠, Data Analyst 📊📈 and Data scientist 👨🏻‍💻🖥️"
   links:
     - label: "GitHub"
       icon: "fab fa-github"
