--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Professional portfolio"
+title: "Bioinformatics and Data Analysis Portfolio"
 email: "nico250999@gmail.com"
 description: "Portafolio profesional de ciencia de datos, bioinformática e investigación."
 baseurl: "" 
